Fixes various issues on overview page
* Vertical scroll appears on event list
* Job status filter alignment
* Last 10 jobs get changed to last 3 on the table
* Overview and Cluster tables look broken sometimes on small screens

--- a/dp-plugin-apps/dlm/dlm-web/src/app/pages/overview/overview.component.scss
+++ b/dp-plugin-apps/dlm/dlm-web/src/app/pages/overview/overview.component.scss
@@ -5,7 +5,7 @@
 }
 
 .job-status-filter {
-  margin: 10px 0;
+  margin-left: 10px;
 
   .label.label-default a {
     color: #fff;
